--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
     <!-- SortableJS for drag-and-drop -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-    <script src="script.js"></script>
+   <script type="module" src="script.js"></script>
+
   </body>
 </html>
